@@ -1,3 +1,5 @@
+2007-03-23 Made font_manager.py close opened files. - JKS
+
 2007-03-22 Some more niceties for xcorr -- a maxlags option, normed
            now works for xcorr as well as axorr, usevlines is
            supported, and a zero correlation hline is added.  See
